fixed overflow

--- a/Styles/menu_style.css
+++ b/Styles/menu_style.css
@@ -1,6 +1,7 @@
 .container {
     overflow-y: hidden;
-    overflow-x: auto;
+    overflow-x: scroll;
+	-webkit-overflow-scrolling: touch;
 }
 
 a:link {
